# job-hunt-tool

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: build-fix.prompt.md  plan.prompt.md  refactor.prompt.md  tdd.prompt.md
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  applicant_node.py  matcher_node.py  orchestrator.py  scraper_node.py  state.py  tailor_node.py  tracker_node.py
backend/app/api/: agents.py  applications.py  deps.py  extension.py  jobs.py  match.py  resume.py  stats.py  stream.py
backend/app/db/: crud.py  session.py
backend/app/db/models/: __init__.py  application.py  job.py  resume_chunk.py  user.py
backend/app/schemas/: application.py  extension.py  job.py  match.py  resume.py  tailor.py
backend/app/services/: dedup.py  matcher.py  notifier.py  scraper.py  tailor.py  task_store.py  vector_store.py
backend/app/services/scrapers/: __init__.py  base.py  company_list.py  greenhouse.py  hn.py  lever.py  remoteok.py  remotive.py  rss.py  smartrecruiters.py
backend/app/utils/: retry.py
backend/tests/: conftest.py
backend/tests/api/: test_agents.py  test_extension.py  test_match.py  test_resume_api.py
backend/tests/unit/: test_dedup.py  test_matcher.py  test_notifier.py  test_retry.py  test_schemas.py  test_scraper.py  test_scrapers.py  test_tailor_schema.py  test_task_store.py  test_vector_store.py
doc/: AGENTS.md  ARCHITECTURE.md  COST.md  DEVLOG.md  IMPLEMENTATION.md
extension/: manifest.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/app/: page.tsx  (+1 more)
scripts/: daily_scan.py
src/: __init__.py  __main__.py  matcher.py
(+17 files in other folders)
