[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "job-hunt-tool"
version = "0.1.0"
description = "自主求职智能体 — Hermes驱动的AI求职猎头：自动爬取、LLM匹配、简历定制、自动投递"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "scikit-learn>=1.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.scripts]
job-hunt = "src.__main__:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/"]
