[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jobhunt-flow"
version = "0.1.0"
description = "高可用多智能体求职系统 — LangGraph + RAG + Chrome Extension"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "scikit-learn>=1.0.0",
    "numpy>=1.24.0",
    "httpx>=0.26.0",
    "openai>=1.6.0",
    "langgraph>=0.0.30",
    "pgvector>=0.2.0",
    "python-dotenv>=1.0.0",
    "redis[asyncio]>=5.0.0",
    "httpx>=0.26.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "black>=24.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app/"]
